--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,12 @@ header nav li a:hover{
     top: 30px;
     text-transform: capitalize;
 }
+
+.post .category a{
+    color: inherit;
+    font-size: inherit;
+}
+
 .post figure{
 	margin:0;
 }
@@ -65,6 +71,12 @@ header nav li a:hover{
 .post .tag{
 	margin: 0 5px;
 }
+
+.post .tag a{
+    color: inherit;
+    font-size: inherit;
+}
+
 .post footer{
 	margin-top: 45px;
 	background: none;
@@ -128,7 +140,7 @@ cite .img-cite, .cite .img-cite{
 	padding: 45px;
 	text-align: center;
 	color: #ffffff;
-	
+
 }
 .footer footer .logo{
 	opacity: 0.4;
@@ -213,7 +225,7 @@ a.btn-bar{
 	border: 0;
 	background: #f7f9fc;
 	resize: vertical;
-	padding: 25px 0 0 15px; 
+	padding: 25px 0 0 15px;
 }
 .page-contact .form-contact .send-message a{
 	display: block;
@@ -237,15 +249,15 @@ a.btn-bar{
 	display: block;
 	text-align: center;
 }
-      
+
       .custom-wrapper.open {
           height: 9em;
       }
-      
+
       .custom-menu-3 {
           text-align: right;
       }
-      
+
       .custom-toggle {
           width: 34px;
           height: 34px;
@@ -255,7 +267,7 @@ a.btn-bar{
           right: 20px;
           display: none;
       }
-      
+
       .custom-toggle .bar {
           background-color: #1abc9c;
           display: block;
@@ -265,9 +277,9 @@ a.btn-bar{
           position: absolute;
           top: 18px;
           right: 7px;
-          
+
       }
-      
-      
+
+
 
 
